--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+atomisp-6.10-dkms (1.0.2-2) unstable; urgency=medium
+
+  * Add Atom ISP platform additional drivers
+
+ -- EasyNetDev <devel@easynet.dev>  Sat, 12 Oct 2024 23:13:04 +0300
+
 atomisp-6.10-dkms (1.0.2) unstable; urgency=medium
 
   * Add Atom ISP for Kernel 6.12-rc2
